--- a/app/core/templates/partials/_nav.html
+++ b/app/core/templates/partials/_nav.html
@@ -1,12 +1,13 @@
+{% load static %}
 <nav class="navbar navbar-expand navbar-light navbar-bg">
-    <form class="d-none d-sm-inline-block">
-        <div class="input-group input-group-navbar">
-            <input type="text" class="form-control" placeholder="Pesquisar..." aria-label="Search">
-            <button class="btn" type="button">
-                <i class="align-middle" data-feather="search"></i>
-            </button>
-        </div>
-    </form>
+
+    <a href="{% url 'home' %}" class="sidebar-toggle">
+        <img src="{% static 'img/logoipsum.svg' %}" alt="">
+    </a>
+
+    <div class="d-none d-sm-inline-block">
+        {% include 'partials/_search.html' %}
+    </div>
 
     <ul class="navbar-nav">
         <li class="nav-item px-2 dropdown">
@@ -30,32 +31,35 @@
 
     <div class="navbar-collapse collapse">
         <ul class="navbar-nav navbar-align">
+            <li class="nav-item dropdown">
+                {% if user.is_authenticated %}
 
-            {% if user.is_authenticated %}
-                <li class="nav-item dropdown">
+                    <a class="nav-icon dropdown-toggle d-inline-block d-sm-none" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="align-middle" data-feather="settings"></i>
+                    </a>
+
                     <a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="#" data-bs-toggle="dropdown">
-                        <i class="align-middle fas fa-fw fa-user-circle"></i>
                         <span class="text-dark">{{ user.get_full_name }}</span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-end">
-                        <a class="dropdown-item" href="pages-profile.html">
-                            <i class="align-middle" data-feather="user"></i>
-                            Minha conta
+                        <a class="dropdown-item" href="#">
+                            <i class="align-middle" data-feather="user"></i> <span>Minha conta</span>
                         </a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="{% url 'sign-out' %}">Sair</a>
                     </div>
-                </li>
-            {% else %}
-                <li class="nav-item">
-                    <a href="{% url 'sign-in' %}" class="nav-link d-none d-sm-inline-block">
+
+                {% else %}
+
+                    <a href="{% url 'sign-in' %}" class="nav-link">
                         <span>
                             <i class="align-middle" data-feather="log-in"></i>
                             Entrar
                         </span>
                     </a>
-                </li>
-            {% endif %}
+
+                {% endif %}
+            </li>
         </ul>
     </div>
 </nav>
